node.js/rescripted/rescripted.dev/web/RescriptedParser.js
// $ANTLR 3.3 Nov 30, 2010 12:46:29 Rescripted.g 2012-04-09 16:25:30

var RescriptedParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    RescriptedParser.superclass.constructor.call(this, input, state);

    this.dfa10 = new RescriptedParser.DFA10(this);
    this.dfa11 = new RescriptedParser.DFA11(this);
    this.dfa12 = new RescriptedParser.DFA12(this);
    this.dfa28 = new RescriptedParser.DFA28(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(RescriptedParser, {
    EOF: -1,
    T__111: 111,
    T__112: 112,
    T__113: 113,
    T__114: 114,
    T__115: 115,
    T__116: 116,
    T__117: 117,
    T__118: 118,
    T__119: 119,
    T__120: 120,
    T__121: 121,
    BLOCK: 4,
    GROUP: 5,
    PAIR: 6,
    OBJECT_LITERAL: 7,
    ARRAY_LITERAL: 8,
    FOR_IN: 9,
    COMPREHENSION_BODY: 10,
    GUARD: 11,
    ARGUMENT_DECLARATION: 12,
    ARGUMENT_DEFINITION: 13,
    ARGUMENT_LIST: 14,
    LAMBDA: 15,
    METHOD_NAME: 16,
    QUALIFIED_ID: 17,
    ANNOTATIONS: 18,
    ANNOTATION: 19,
    PARTIAL_FUNCTION: 20,
    EXTRACTOR_PATTERN: 21,
    EQUALS_PATTERN: 22,
    NAME_PATTERN: 23,
    TYPED_PATTERN: 24,
    SELECT_PROPERTY: 25,
    BINDING: 26,
    BIND_PROPERTY: 27,
    BIND_EXPRESSION: 28,
    EXPR: 29,
    TYPE: 30,
    IMPORT: 31,
    PACKAGE: 32,
    CLASS: 33,
    OBJECT: 34,
    TRAIT: 35,
    EXTENDS: 36,
    WITH: 37,
    BASE: 38,
    SUPER: 39,
    CASE: 40,
    IF: 41,
    ELSE: 42,
    THROW: 43,
    TRY: 44,
    CATCH: 45,
    FINALLY: 46,
    PUBLIC: 47,
    PRIVATE: 48,
    PROTECTED: 49,
    OVERRIDE: 50,
    FINAL: 51,
    NATIVE: 52,
    DEF: 53,
    VAR: 54,
    VAL: 55,
    VARARGS: 56,
    FOR: 57,
    WHILE: 58,
    DO: 59,
    YIELD: 60,
    SELF: 61,
    THIS: 62,
    RETURN: 63,
    NEW: 64,
    DELETE: 65,
    NULL: 66,
    TRUE: 67,
    FALSE: 68,
    WILDCARD: 69,
    COLON: 70,
    ID_START: 71,
    ID_CHAR: 72,
    BAD_ID: 73,
    ID: 74,
    OBJECT_LITERAL_ID_: 75,
    WS: 76,
    OBJECT_LITERAL_ID: 77,
    INT: 78,
    HEX_DIGIT: 79,
    HEX_INT: 80,
    EXPONENT: 81,
    FLOAT: 82,
    UNICODE_ESC: 83,
    OCTAL_ESC: 84,
    ESC_SEQ: 85,
    XML_NAME: 86,
    XML_ATTR: 87,
    XML_CONTENT: 88,
    XML_ELEM: 89,
    XML_ATTR_VALUE: 90,
    XML_BINDING: 91,
    XML_CDATA: 92,
    XML_COMMENT: 93,
    XML_TEXT: 94,
    LINE_COMMENT: 95,
    TERMINATED_COMMENT: 96,
    STRING: 97,
    MINUS: 98,
    PLUS: 99,
    EXCLAMATION: 100,
    DIV: 101,
    STAR: 102,
    MOD: 103,
    EQ: 104,
    POUND: 105,
    DOT: 106,
    OPERATOR_CHAR: 107,
    OPERATOR: 108,
    SEMI: 109,
    COMMA: 110
});

(function(){
// public class variables
var EOF= -1,
    T__111= 111,
    T__112= 112,
    T__113= 113,
    T__114= 114,
    T__115= 115,
    T__116= 116,
    T__117= 117,
    T__118= 118,
    T__119= 119,
    T__120= 120,
    T__121= 121,
    BLOCK= 4,
    GROUP= 5,
    PAIR= 6,
    OBJECT_LITERAL= 7,
    ARRAY_LITERAL= 8,
    FOR_IN= 9,
    COMPREHENSION_BODY= 10,
    GUARD= 11,
    ARGUMENT_DECLARATION= 12,
    ARGUMENT_DEFINITION= 13,
    ARGUMENT_LIST= 14,
    LAMBDA= 15,
    METHOD_NAME= 16,
    QUALIFIED_ID= 17,
    ANNOTATIONS= 18,
    ANNOTATION= 19,
    PARTIAL_FUNCTION= 20,
    EXTRACTOR_PATTERN= 21,
    EQUALS_PATTERN= 22,
    NAME_PATTERN= 23,
    TYPED_PATTERN= 24,
    SELECT_PROPERTY= 25,
    BINDING= 26,
    BIND_PROPERTY= 27,
    BIND_EXPRESSION= 28,
    EXPR= 29,
    TYPE= 30,
    IMPORT= 31,
    PACKAGE= 32,
    CLASS= 33,
    OBJECT= 34,
    TRAIT= 35,
    EXTENDS= 36,
    WITH= 37,
    BASE= 38,
    SUPER= 39,
    CASE= 40,
    IF= 41,
    ELSE= 42,
    THROW= 43,
    TRY= 44,
    CATCH= 45,
    FINALLY= 46,
    PUBLIC= 47,
    PRIVATE= 48,
    PROTECTED= 49,
    OVERRIDE= 50,
    FINAL= 51,
    NATIVE= 52,
    DEF= 53,
    VAR= 54,
    VAL= 55,
    VARARGS= 56,
    FOR= 57,
    WHILE= 58,
    DO= 59,
    YIELD= 60,
    SELF= 61,
    THIS= 62,
    RETURN= 63,
    NEW= 64,
    DELETE= 65,
    NULL= 66,
    TRUE= 67,
    FALSE= 68,
    WILDCARD= 69,
    COLON= 70,
    ID_START= 71,
    ID_CHAR= 72,
    BAD_ID= 73,
    ID= 74,
    OBJECT_LITERAL_ID_= 75,
    WS= 76,
    OBJECT_LITERAL_ID= 77,
    INT= 78,
    HEX_DIGIT= 79,
    HEX_INT= 80,
    EXPONENT= 81,
    FLOAT= 82,
    UNICODE_ESC= 83,
    OCTAL_ESC= 84,
    ESC_SEQ= 85,
    XML_NAME= 86,
    XML_ATTR= 87,
    XML_CONTENT= 88,
    XML_ELEM= 89,
    XML_ATTR_VALUE= 90,
    XML_BINDING= 91,
    XML_CDATA= 92,
    XML_COMMENT= 93,
    XML_TEXT= 94,
    LINE_COMMENT= 95,
    TERMINATED_COMMENT= 96,
    STRING= 97,
    MINUS= 98,
    PLUS= 99,
    EXCLAMATION= 100,
    DIV= 101,
    STAR= 102,
    MOD= 103,
    EQ= 104,
    POUND= 105,
    DOT= 106,
    OPERATOR_CHAR= 107,
    OPERATOR= 108,
    SEMI= 109,
    COMMA= 110;

// public instance methods/vars
org.antlr.lang.extend(RescriptedParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return RescriptedParser.tokenNames; },
    getGrammarFileName: function() { return "Rescripted.g"; }
});
org.antlr.lang.augmentObject(RescriptedParser.prototype, {

    // inline static return class
    delimiter_return: (function() {
        RescriptedParser.delimiter_return = function(){};
        org.antlr.lang.extend(RescriptedParser.delimiter_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // Rescripted.g:191:1: delimiter : ( ',' | ';' )? ;
    // $ANTLR start "delimiter"
    delimiter: function() {
        var retval = new RescriptedParser.delimiter_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var set1 = null;

        var set1_tree=null;

        try {
            // Rescripted.g:191:10: ( ( ',' | ';' )? )
            // Rescripted.g:191:12: ( ',' | ';' )?
            root_0 = this.adaptor.nil();

            // Rescripted.g:191:12: ( ',' | ';' )?
            var alt1=2;
            var LA1_0 = this.input.LA(1);

            if ( ((LA1_0>=SEMI && LA1_0<=COMMA)) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // Rescripted.g:
                    set1=this.input.LT(1);
                    if ( (this.input.LA(1)>=SEMI && this.input.LA(1)<=COMMA) ) {
                        this.input.consume();
                        if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, this.adaptor.create(set1));
                        this.state.errorRecovery=false;this.state.failed=false;
                    }
                    else {
                        if (this.state.backtracking>0) {this.state.failed=true; return retval;}
                        var mse = new org.antlr.runtime.MismatchedSetException(null,this.input);
                        throw mse;
                    }



                    break;

            }




            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    operator_return: (function() {
        RescriptedParser.operator_return = function(){};
        org.antlr.lang.extend(RescriptedParser.operator_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // Rescripted.g:193:1: operator : ( EQ | EXCLAMATION | PLUS | MINUS | DIV | STAR | MOD | OPERATOR );
    // $ANTLR start "operator"
    operator: function() {
        var retval = new RescriptedParser.operator_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var set2 = null;

        var set2_tree=null;

        try {
            // Rescripted.g:193:9: ( EQ | EXCLAMATION | PLUS | MINUS | DIV | STAR | MOD | OPERATOR )
            // Rescripted.g:
            root_0 = this.adaptor.nil();

            set2=this.input.LT(1);
            if ( (this.input.LA(1)>=MINUS && this.input.LA(1)<=EQ)||this.input.LA(1)==OPERATOR ) {
                this.input.consume();
                if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, this.adaptor.create(set2));
                this.state.errorRecovery=false;this.state.failed=false;
            }
            else {
                if (this.state.backtracking>0) {this.state.failed=true; return retval;}
                var mse = new org.antlr.runtime.MismatchedSetException(null,this.input);
                throw mse;
            }




            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    qualified_id_return: (function() {
        RescriptedParser.qualified_id_return = function(){};
        org.antlr.lang.extend(RescriptedParser.qualified_id_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // Rescripted.g:194:1: qualified_id : id+= ID ( ( '.' )=> '.' id+= ID )* -> ^( QUALIFIED_ID ( $id)+ ) ;
    // $ANTLR start "qualified_id"
    qualified_id: function() {
        var retval = new RescriptedParser.qualified_id_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal3 = null;
        var id = null;
        var list_id=null;

        var char_literal3_tree=null;
        var id_tree=null;
        var stream_DOT=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token DOT");
        var stream_ID=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token ID");

        try {
            // Rescripted.g:194:13: (id+= ID ( ( '.' )=> '.' id+= ID )* -> ^( QUALIFIED_ID ( $id)+ ) )
            // Rescripted.g:194:15: id+= ID ( ( '.' )=> '.' id+= ID )*
            id=this.match(this.input,ID,RescriptedParser.FOLLOW_ID_in_qualified_id1666); if (this.state.failed) return retval; 
            if ( this.state.backtracking===0 ) stream_ID.add(id);

            if (org.antlr.lang.isNull(list_id)) list_id = [];
            list_id.push(id);

            // Rescripted.g:194:22: ( ( '.' )=> '.' id+= ID )*
            loop2:
            do {
                var alt2=2;
                var LA2_0 = this.input.LA(1);

                if ( (LA2_0==DOT) ) {
                    var LA2_2 = this.input.LA(2);

                    if ( (LA2_2==ID) && (this.synpred1_Rescripted())) {
                        alt2=1;
                    }


                }


                switch (alt2) {
                case 1 :
                    // Rescripted.g:194:23: ( '.' )=> '.' id+= ID
                    char_literal3=this.match(this.input,DOT,RescriptedParser.FOLLOW_DOT_in_qualified_id1675); if (this.state.failed) return retval; 
                    if ( this.state.backtracking===0 ) stream_DOT.add(char_literal3);

                    id=this.match(this.input,ID,RescriptedParser.FOLLOW_ID_in_qualified_id1679); if (this.state.failed) return retval; 
                    if ( this.state.backtracking===0 ) stream_ID.add(id);

                    if (org.antlr.lang.isNull(list_id)) list_id = [];
                    list_id.push(id);



                    break;

                default :
                    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: id
            // token labels: 
            // rule labels: retval
            // token list labels: id
            // rule list labels: 
            if ( this.state.backtracking===0 ) {
            retval.tree = root_0;
            var stream_id=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token id", list_id);
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 194:45: -> ^( QUALIFIED_ID ( $id)+ )
            {
                // Rescripted.g:194:48: ^( QUALIFIED_ID ( $id)+ )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(QUALIFIED_ID, "QUALIFIED_ID"), root_1);

                if ( !(stream_id.hasNext()) ) {
                    throw new org.antlr.runtime.tree.RewriteEarlyExitException();
                }
                while ( stream_id.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_id.nextNode());

                }
                stream_id.reset();

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}


            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    type_name_return: (function() {
        RescriptedParser.type_name_return = function(){};
        org.antlr.lang.extend(RescriptedParser.type_name_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // Rescripted.g:196:1: type_name : qualified_id ( '[' (type_params+= type_name ( ',' | ';' )? )+ ']' )? ( '!' )? -> ^( TYPE qualified_id ( $type_params)* ( '!' )? ) ;
    // $ANTLR start "type_name"
    type_name: function() {
        var retval = new RescriptedParser.type_name_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal5 = null;
        var char_literal6 = null;
        var char_literal7 = null;
        var char_literal8 = null;
        var char_literal9 = null;
        var list_type_params=null;
         var qualified_id4 = null;
        var type_params = null;
        var char_literal5_tree=null;
        var char_literal6_tree=null;
        var char_literal7_tree=null;
        var char_literal8_tree=null;
        var char_literal9_tree=null;
        var stream_112=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 112");
        var stream_EXCLAMATION=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token EXCLAMATION");
        var stream_111=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 111");
        var stream_COMMA=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token COMMA");
        var stream_SEMI=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token SEMI");
        var stream_qualified_id=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule qualified_id");
        var stream_type_name=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule type_name");
        try {
            // Rescripted.g:196:10: ( qualified_id ( '[' (type_params+= type_name ( ',' | ';' )? )+ ']' )? ( '!' )? -> ^( TYPE qualified_id ( $type_params)* ( '!' )? ) )
            // Rescripted.g:197:2: qualified_id ( '[' (type_params+= type_name ( ',' | ';' )? )+ ']' )? ( '!' )?
            this.pushFollow(RescriptedParser.FOLLOW_qualified_id_in_type_name1699);
            qualified_id4=this.qualified_id();
